@@ -13,6 +13,9 @@ SQLObject (trunk)
 Features & Interface
 --------------------
 
+* A bug caused by psycopg2 recently added a new boolean not callable
+  autocommit attribute was fixed.
+
 SQLObject 1.1.1
 ===============
 
